--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-import streamlit as st
-import pickle
-import pandas as pd
-import numpy as np
-import xgboost
-from xgboost import XGBRegressor
 xgboost==1.0.2
-numba==0.48.0
+sklearn
+pandas
