--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 xgboost==1.7.4
-scikit-learn==0.23.0
-pandas
-pickle-mixin
-scipy
-numpy
+scikit-learn==1.2.2
+pandas==1.5.2
+pickle-mixin==1.0.2
+scipy==1.8.0
+numpy==1.21.5
