--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 xgboost==1.7.4
-scikit-learn==1.2.0
+scikit-learn==1.2.2
 pandas==1.5.2
 pickle-mixin==1.0.2
 scipy==1.8.0
 numpy==1.21.5
+streamlit==1.16.0
